--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,11 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "xstring": "cpp"
+        "xstring": "cpp",
+        "xiosbase": "cpp",
+        "xtree": "cpp",
+        "xutility": "cpp",
+        "iomanip": "cpp",
+        "ios": "cpp"
     }
 }
