Add Question 1 - Delete Company.h - Tin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,9 @@
         "xtree": "cpp",
         "xutility": "cpp",
         "iomanip": "cpp",
-        "ios": "cpp"
+        "ios": "cpp",
+        "xlocmon": "cpp",
+        "xlocnum": "cpp",
+        "xtr1common": "cpp"
     }
 }
